--- a/.github/workflows/off_ci.yml
+++ b/.github/workflows/off_ci.yml
@@ -37,10 +37,19 @@ jobs:
         with:
           python-version: "3.12"
 
+      - name: Update CA certificates
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y ca-certificates
+        
       - name: Install Python dependencies
         run: |
           pip install -r requirements.txt
           # If needed: pip install dbt-snowflake, python-dotenv, etc.
+
+      - name: Reinstall certifi
+        run: |
+          pip install --force-reinstall --upgrade certifi
       
       - name: Install dbt packages (deps)
         run: |
