--- a/.github/workflows/off_ci.yml
+++ b/.github/workflows/off_ci.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [ "main" ]
   schedule:
-    - cron: "1 0 * * *"
+    - cron: "1 0 1 * *"
   workflow_dispatch:
 
 jobs:
